<resources>
    <string name="app_name">EduAssist</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="solved">已完成</string>
    <string name="unsolve">进行中</string>  <!-- 0: 语文, 1: 数学, 2: 英语, 3: 物理, 4: 化学, 5: 生物, 6: 政治, 7: 历史, 8: 地理 -->
    <string name="verbal">语文</string>
    <string name="math">数学</string>
    <string name="English">英语</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="biology">生物</string>
    <string name="politics">政治</string>
    <string name="history">历史</string>
    <string name="geography">地理</string>
    <string name="mPrivate">个人</string>
    <string name="mPublic">公开</string>
    <string name="allData">全部</string>
    <string name="noData">暂无数据</string>
    <string name="searchQuestions">搜索题目</string>
    <string name="askPublic">公开提问</string>
    <string name="askPrivate">个人提问</string>
    <string name="inputQuestion">输入问题</string>
    <string name="inputValue">输入赏金</string>
    <string name="title">标题</string>
    <string name="text">问题补充</string>
    <string name="success">提交成功！</string>
    <string name="failed">提交失败，请检查网络！</string>
    <string name="check">确定</string>
    <string name="cancel">取消</string>
    <string name="myInfo">我的信息</string>
    <string name="myQuestions">我的提问</string>
    <string name="myAnswers">我的回答</string>
    <string name="myAppointment">邀请回答</string>
    <string name="id">ID:</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">还没有账号？去创建一个</string>
    <string name="register_title">注册</string>
    <string name="email">Email</string>
    <string name="nickname">昵称</string>
    <string name="tel">Tel</string>
    <string name="gender">性别</string>
    <string name="title_teacher">教师</string>
    <string name="title_student">学生</string>
    <string name="submit">提交</string>
    <string name="askMe">向我提问:</string>
    <string name="open">开启</string>
    <string name="closed">关闭</string>
    <string name="searchUser">搜索用户</string>
    <string name="search">搜索</string>
    <string name="target">提问对象:</string>
    <string name="loading">加载中…</string>
    <string name="private_mode_not_support">该用户关闭了“向他提问”</string>
    <string name="question_detail_title">问题详情</string>
    <string name="userAnswers">用户回答</string>
    <string name="loadFailed">加载失败!</string>
    <string name="inputAnswer">输入答案</string>
    <string name="answerText">输入文字</string>
    <string name="answer_detail_title">答案详情</string>
    <string name="private_question">想要偷看？</string>
    <string name="click_here">点击这里</string>
    <string name="confirm_payment">“偷看”将扣除问题价值一半的费用：$</string>
    <string name="continue_or_not"> , 是否继续？</string>
    <string name="payment_failed">扣费失败</string>
    <string name="my_question">我的提问</string>
    <string name="score_not_enough">余额不足</string>
    <string name="no_questions">您还未提过问题</string>
    <string name="my_answer">我的回答</string>
    <string name="no_answers">您还未回答过问题</string>
    <string name="accept_answer">确定采纳此答案吗？</string>
    <string name="accept_success">采纳成功！</string>
    <string name="accept_failed">采纳失败！</string>
    <string name="no_answer">暂无回答，</string>
    <string name="go_public">将问题变为公开？</string>
    <string name="go_public_check">"确定将问题公开？您的问题将可以被所有用户回答"</string>
    <string name="my_invite">邀请回答</string>
    <string name="no_invitation">暂无邀请</string>
    <string name="appointment_name">预约人：</string>
    <string name="questions">问题</string>
    <string name="appointment">预约</string>
    <string name="no_appointment">暂无预约</string>
    <string name="critical_credit">信用值不足，请保持良好使用习惯(积极回答问题)以提升信用值</string>
    <string name="credit_high">信用良好</string>
    <string name="credit_mid">信用一般</string>
    <string name="credit_low">信用较低</string>
    <string name="credit_status">信用状况</string>
</resources>
