<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">
            <EditText
                android:id="@+id/register_name"
                style="@style/RegisterEditor"
                android:hint="@string/username"
                android:textColorHint="@color/dark_gray"/>
            <EditText
                android:id="@+id/register_password"
                style="@style/RegisterEditor"
                android:hint="@string/password"
                android:textColorHint="@color/dark_gray"/>

            <EditText
                android:id="@+id/register_Email"
                style="@style/RegisterEditor"
                android:hint="@string/email"
                android:textColorHint="@color/dark_gray"/>
            <EditText
                android:id="@+id/register_Tel"
                style="@style/RegisterEditor"
                android:hint="@string/tel"
                android:textColorHint="@color/dark_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_marginRight="16dp"
                android:text="@string/gender"
                android:textColor="@color/dark_gray"
                android:gravity="center_vertical"/>
            <Spinner
                android:id="@+id/register_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/register_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_student"
                android:textColor="@color/dark_gray"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"/>
            <RadioButton
                android:id="@+id/register_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_teacher"
                android:textColor="@color/dark_gray"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <Button
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle_login"/>

    </LinearLayout>


</LinearLayout>