<?xml version="1.0" encoding="utf-8"?>
<com.jeremyfeinstein.slidingmenu.lib.SlidingMenu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidingmenulayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/slide_menu_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary">
            <RelativeLayout
                android:id="@+id/slide_menu_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/slide_menu_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text = "tom@test.com"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/slide_menu_id_tag"
                    android:layout_below="@+id/slide_menu_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="17sp"
                    android:textColor="@android:color/white"
                    android:text="@string/id"/>
                <TextView
                    android:id="@+id/slide_menu_user_id"
                    android:layout_toRightOf="@+id/slide_menu_id_tag"
                    android:layout_below="@+id/slide_menu_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    tools:text="123456"
                    android:textSize="17sp"
                    android:textColor="@android:color/white"
                    android:gravity=""/>

            </RelativeLayout>

            <TextView
                android:id="@+id/slide_menu_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "登陆/注册"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rectangle_slide_tag"
               />
        </RelativeLayout>    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <TextView
                android:id="@+id/slide_menu_info"
               style="@style/SlidingMenuText"
                android:text="@string/myInfo"
                android:layout_marginTop="32dp"/>
            <TextView
                android:id="@+id/slide_menu_question"
                android:layout_below="@+id/slide_menu_info"
                style="@style/SlidingMenuText"
                android:text="@string/myQuestions"/>
            <TextView
                android:id="@+id/slide_menu_answers"
                android:layout_below="@+id/slide_menu_question"
                style="@style/SlidingMenuText"
                android:text="@string/myAnswers" />
            <TextView
                android:id="@+id/slide_menu_appointment"
                android:layout_below="@+id/slide_menu_answers"
                style="@style/SlidingMenuText"
                android:text="@string/myAppointment" />
            <TextView
                android:id="@+id/slide_menu_logout"
                style="@style/SlidingMenuText"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:text="退出登陆"
                android:textColor="#BDBDBD"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>
   
</com.jeremyfeinstein.slidingmenu.lib.SlidingMenu>