<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:layout_above="@+id/login_main_body"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/logo_1"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/login_main_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="32dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textColorHint="@color/editTextHint"
                android:hint="@string/username"
                android:layout_marginBottom="16dp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textColorHint="@color/editTextHint"
                android:hint="@string/password"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
                <CheckBox
                    android:id="@+id/check_box_remember_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="记住密码"
                    android:button="@drawable/checkbox"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                     />
                <CheckBox
                    android:id="@+id/check_box_auto_login"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:button="@drawable/checkbox"
                    android:text="自动登录"
                    />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login"
            android:background="@drawable/rectangle_login"
            android:textColor="@android:color/white"
            android:layout_below="@+id/editor"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/register"
            android:layout_below="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textColor="@color/editTextHint"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>