<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/new_question_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/new_question_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_toRightOf="@+id/new_question_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputQuestion"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/new_question_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
    <TextView
        android:layout_below="@+id/new_question_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"/>
    <LinearLayout
        android:id="@+id/new_question_target"
        android:layout_below="@+id/new_question_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_question_bar"
            android:text="@string/target"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/new_question_target_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            tools:text = "Tom"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_question_2nd_bar"
        android:layout_below="@+id/new_question_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_new_question">
        <com.example.shichaonie.eduassist.Utils.NiceSpinner.NiceSpinner
            android:id="@+id/new_question_category"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            android:src="@drawable/ic_attach_money"/>
        <EditText
            android:id="@+id/new_question_value"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/inputValue"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:background="@drawable/rectangle_edit"/>
    </LinearLayout>


    <EditText
        android:id="@+id/new_question_title"
        android:layout_below="@id/new_question_2nd_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rectangle_new_question"
        android:hint="@string/title"
        android:textSize="15sp"
        android:paddingLeft="16dp"/>
    <TextView
        android:id="@+id/text_layout"
        android:layout_below="@+id/new_question_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_new_question"
        android:padding="16dp"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/new_question_text"
        android:layout_below="@id/new_question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_new_question"
        android:hint="@string/text"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <RelativeLayout
        android:id="@+id/new_question_shelter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/new_question_bar"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40000000"
             />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</RelativeLayout>