<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <LinearLayout
            android:id="@+id/search_bar_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_white_24dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/user_list_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rectangle_edit"
                android:gravity="center_vertical"
                android:hint="@string/searchUser"
                android:textColorHint="@color/editTextHint"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:inputType="text"
                android:imeOptions="actionSearch"/>

        </LinearLayout>
        <TextView
            android:id="@+id/user_list_search_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:text="@string/search"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/user_list_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/user_list_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="@string/noData"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/user_list_swip_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/user_list_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>
</LinearLayout>